# ChangeLog for net-zope/zodb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zodb/ChangeLog,v 1.35 2009/11/09 19:08:29 fauli Exp $

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org> zodb-3.9.3.ebuild:
  keyworded ~arch for x86, bug 288603

*zodb-3.9.3 (24 Oct 2009)

  24 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zodb-3.9.1.ebuild, +zodb-3.9.3.ebuild,
  +files/zodb-3.9.3-py24compat.h.patch:
  Version bump. Install py24compat.h.

*zodb-3.9.2 (18 Oct 2009)

  18 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zodb-3.9.2.ebuild:
  Version bump.

*zodb-3.9.1 (11 Oct 2009)

  11 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zodb-3.9.1.ebuild:
  Version bump (bug #191260). Set SUPPORT_PYTHON_ABIS.

  04 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  zodb-3.3.1.ebuild, zodb-3.3.1-r1.ebuild, zodb-3.6.0.ebuild,
  zodb-3.6.0-r1.ebuild:
  net-zope/zopeinterface renamed to net-zope/zope-interface.

  17 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> zodb-3.3.1.ebuild,
  zodb-3.3.1-r1.ebuild, zodb-3.6.0.ebuild, zodb-3.6.0-r1.ebuild:
  Pull in Python 2.4 or older wrt #257545.

*zodb-3.6.0-r1 (17 Aug 2009)
*zodb-3.3.1-r1 (17 Aug 2009)

  17 Aug 2009; Alex Legler <a3li@gentoo.org> +zodb-3.3.1-r1.ebuild,
  +files/zodb-3.3.1-CVE-2009-0668+0669.patch, +zodb-3.6.0-r1.ebuild,
  +files/zodb-3.6.0-CVE-2009-0668+0669.patch:
  Non-mainatiner commit: Version bump for security bug 278824.

  01 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> zodb-3.3.1.ebuild,
  zodb-3.6.0.ebuild:
  Block zopeinterface wrt #190882, don't remove it unless you fix it.

  02 Feb 2007; Steve Dibb <beandog@gentoo.org> zodb-3.6.0.ebuild:
  Add ~amd64, bug 163805

  23 Nov 2006; <blubb@gentoo.org> zodb-3.3.1.ebuild:
  stable on amd64

  16 Aug 2006; Alastair Tse <liquidx@gentoo.org> zodb-3.6.0.ebuild:
  stable for x86

*zodb-3.6.0 (05 Jan 2006)