@@ -4,13 +4,13 @@ AUX zodb-3.6.0-CVE-2009-0668+0669.patch 4772 RMD160 cf49c6da82ca2b15eac78f748e6a
 AUX zodb-3.9.3-py24compat.h.patch 650 RMD160 239721c824ebea444e30573f36be68c67acf45ab SHA1 a5a6d8abfee63a5746042c065793347baf12fef9 SHA256 2c31dd618801bfebf6596e916ff3fea4caab4ef14e086b3af205de0bfe2cd515
 DIST ZODB3-3.3.1.tgz 1019277 RMD160 2a72596c7a2db0394d780aeee8ad5d3ab820b2fc SHA1 698e764f4e52612632a89ae6fb10b61ca69c1749 SHA256 9ecd9842faad4fbcda903100515ab1d4244fcf3b46a9db67857ea59542b0d49d
 DIST ZODB3-3.6.0.tgz 1193131 RMD160 799e8bc0f1db8125407ca9b7d87e79877606c003 SHA1 959be4060a7759c08912065cd4b050ea2813cfa5 SHA256 b81862b604fb924e7ecc34b69c04016dca5c16368570bfcdece06dfb2a2e42ab
-DIST ZODB3-3.9.2.tar.gz 694292 RMD160 2058cb2d6b3075d7b19a22424e13b4832cdf98a5 SHA1 7e45b20e2e861622ff16a4c24b7a71603bf7cbf9 SHA256 a4890413348ab4aecadfc3c01283cbf006371a7db229f130034d2025152a59d7
 DIST ZODB3-3.9.3.tar.gz 695642 RMD160 1d9b74686620dae1fab864c6acf744f35d7d71c1 SHA1 5bb0d2f9e1ff576e1313d79b3e9fe62afc62983b SHA256 a548e9e54caf3a859462839e574eb39ed02a8852d4ea8ad3f6a603749442bc2a
+DIST ZODB3-3.9.4.tar.gz 698126 RMD160 75f4f3bd55ec52e9cc9de46d8775941f7280e0fa SHA1 08137fbd940cc98775d612b222eefb64e02113ee SHA256 463c130dcc25afa3a871d02adfe115ffb5d838c94bc48af716d4a7e582902fbf
 EBUILD zodb-3.3.1-r1.ebuild 769 RMD160 432a0390dd23344e59df2ace0c555800f243c587 SHA1 dd98425607ee023b4d22cde554001bd6e0f1ce7f SHA256 dbbd4c44bab7544c3c60d6dba4a47902a75e7909ce0dd19a3d9be21e95368a25
 EBUILD zodb-3.3.1.ebuild 788 RMD160 e0340d83cbdfdb3ae9b764bd3989f2cb17706a62 SHA1 3fe69bc46bdb74f66cf762a2bf39c46080e566a7 SHA256 4182879fa9834c938c27ef059fbc09069b336d1cf1ace8f4c4b320c4722bb8a4
 EBUILD zodb-3.6.0-r1.ebuild 655 RMD160 17bda6f7e3d77211dd7359c33a32c2ee0431d884 SHA1 871cefabc9d5ccd9bd79020c5324dc118d4645a2 SHA256 6d033506bab9e55fb6cfe7a5de5aa402ae12c785f1e656097a3ce6339b327bf5
 EBUILD zodb-3.6.0.ebuild 573 RMD160 b9425184e8a07869b0a446624c64a7fe0428a469 SHA1 1ec63bf5204e84939f14b27a344621c7ddf3e3f1 SHA256 0833d9b652b07fceed7fc6b4522ba100e7067db9f064cbc5ff1eec2cf07e0e9d
-EBUILD zodb-3.9.2.ebuild 1581 RMD160 4275033b16467aa31c25e06a16d39686a458187f SHA1 5bfb13440ac429efffce947ff212c241ef9d3953 SHA256 eb60360f4b8de1ba1b84324a963d3bf4ec036bc58eabad45e8700c90d1802d93
 EBUILD zodb-3.9.3.ebuild 1432 RMD160 461b4aadb84fa144236ac1c5f2e25cad92a940dd SHA1 8f88d2dbb4bfb96c44148db9635b66d0067a5f01 SHA256 aea76be1bdca4a507e734c8e36fca6ca8731b4fca308cda532c1a745ca97a51c
-MISC ChangeLog 5135 RMD160 94149b6ff4c35eb8693e3636a84d726001420c0a SHA1 07102d1015f0a823ee8f33e59962c2b546db78f1 SHA256 a0dd9517435e21ac51ff5a7cd28899a5aee71374776e557e2261e512536b9680
+EBUILD zodb-3.9.4.ebuild 1425 RMD160 15ea1a8c3b0e822b20cb049dcf56b2c1ed31518c SHA1 b31077becc31fd627a7907eb5f26b124f8c4e22d SHA256 c776998f83250854cf6ef85ccb3ee2466c6cdf489d406251378bc4c337d28bb0
+MISC ChangeLog 5341 RMD160 921790ca41ec53031d20e86c445c1a1dcb87ddca SHA1 b3ba454ada2a9cc5c67ccf393b6d48d7937f0dbd SHA256 60ddbd5efeb4d33a1f9aee7d64ee4e2429583e3814253a73491faf9571b5e715
 MISC metadata.xml 161 RMD160 5e136d45f811478292bd2ee1798a9b0229ffe468 SHA1 9755179a2dee0511818b1f6738ded28e335e1b9a SHA256 e69ac7205cbc2e42a297e20d8f08922003390a345bbf50ccf00d1158a1c97cc5
